--- a/views/widget/detail_bar/detail_bar.html
+++ b/views/widget/detail_bar/detail_bar.html
@@ -1,15 +1,17 @@
 <!--<link rel="stylesheet" href="{{helper.cdnhost}}/views/widget/detail_bar/detail_bar.css" >-->
 <div class="detail_bar" id="detail_bar">
     <div class="detail_bar_in clearfix">
-        <div class="bar_title">{{article.article_info.title}}</div>
+        <div class="bar_title">{{article.article_info.title|ellipsis(36)}}</div>
         <div class="bar_options">
-            <div class="bdsharebuttonbox share_buttons clearfix" data-uid='{{userinfo.uid}}'>
-                <a href="#" class="bds_tsina sina" data-cmd="tsina" title="分享到新浪微博" style="background-size: cover;filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='{{helper.cdnhost}}/assets/img/xl.png',sizingMethod='scale'"></a>
-                <a href="#" class="bds_weixin wx" data-cmd="weixin" title="分享到微信" style="background-size: cover;filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='{{helper.cdnhost}}/assets/img/wx.png',sizingMethod='scale'"></a>
-                <a href="#" class="bds_qzone space" data-cmd="qzone" title="分享到QQ空间" style="background-size: cover;filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='{{helper.cdnhost}}/assets/img/qqspace.png',sizingMethod='scale'"></a>
+            <div class="bar-zixun-btn" onclick="openchat_new('{{ userinfo.new_job_number}}')">立即咨询</div>
+            <div class="bdsharebuttonbox share_buttons" data-uid='{{userinfo.uid}}'>
+                <a href="#" class="bds_tsina sina" data-cmd="tsina" title="分享到新浪微博" style="background-size: cover;filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='{{helper.cdnhost}}/img/diye_icon_wb@2x.png',sizingMethod='scale'"></a>
+                <a href="#" class="bds_weixin wx" data-cmd="weixin" title="分享到微信" style="background-size: cover;filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='{{helper.cdnhost}}/img/diye_icon_wx@2x.png',sizingMethod='scale'"></a>
+                <a href="#" class="bds_qzone space" data-cmd="qzone" title="分享到QQ空间" style="background-size: cover;filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='{{helper.cdnhost}}/img/diye_icon_kj@2x.png',sizingMethod='scale'"></a>
             </div>
             <div class="option_buttons">
-                <span class="comments_num" data-totalNum="{{article.article_info.votes + article.article_info.comments}}" id="totalNum"></span><span class="comment_text">评论</span><a href="javascript:;" class="iconfont comment_btn" id="fix_bar_comment">&#xe61c;</a>
+                <span class="comments_num" data-totalNum="{{article.article_info.votes + article.article_info.comments}}" id="totalNum"></span><span class="comment_text">评论</span>
+                <img src="{{helper.cdnhost}}/assets/img/diye_icon_edit@2x.png" alt="" id="fix_bar_comment" class="comment_btn">
             </div>
         </div>
     </div>
