顶部导航链接

--- a/views/widget/new_nav_first/yimin_search_nav.html
+++ b/views/widget/new_nav_first/yimin_search_nav.html
@@ -5,8 +5,8 @@
             <a  target="_blank" href="{{ helper.urlgen('yimin') }}"><img src="{{helper.cdnhost}}/assets/img/yimin_logo_transparent.png" alt="金吉列移民官网" style="width:215px;"/></a>
         </div>
         <ul class="page-type">
-                <li class="type-nav small-nav active"><a href="{{ helper.urlgen('yimin') }}">移民</a></li>
-                <li class="type-nav big-nav"><a href="{{ helper.urlgen('about') }}">关于金吉列</a></li>
+                <li class="type-nav small-nav {{'active' if tdk.pagekey == 'YIMIN_HOME'}}"><a href="{{ helper.urlgen('yimin') }}">移民</a></li>
+                <li class="type-nav big-nav {{'active' if tdk.pagekey == 'PROFILE' or tdk.pagekey == 'CULTURE' or tdk.pagekey == 'EVENTS' or tdk.pagekey == 'COOPERATION' or tdk.pagekey == 'CONTACT'}}"><a href="{{ helper.urlgen('about') }}">关于金吉列</a></li>
         </ul>
         <div class="nav-right">
             <div class="new-searchs new-home-search">
