--- a/views/so_adviser.html
+++ b/views/so_adviser.html
@@ -70,7 +70,7 @@
             <div class="has-result">
                 <div class="result-type-bar" data-order="{{order}}" id="result-type-bar">
                     <a href="{{helper.paramurlgen('so_advisor','q='+ keyword)}}" {% if order == '' %}class="active"{% else %}{% endif %}>综合</a>
-                    <a href="{{helper.paramurlgen('so_advisor','q='+ keyword, 'order=fans_count')}}" {% if order == 'fans_count' %}class="active"{% else %}{% endif %}>粉丝数</a>
+                    <a href="{{helper.paramurlgen('so_advisor','q='+ keyword, 'order=fans_count')}}" {% if order == 'fans_count' %}class="active"{% else %}{% endif %}>最热</a>
                     <a href="{{helper.paramurlgen('so_advisor','q='+ keyword, 'order=article_count')}}" {% if order == 'article_count' %}class="active"{% else %}{% endif %}>文章数</a>
                 </div>
                 <div class="result-conent" id="result-content">
