--- a/views/widget/new_nav_first/nav_login.html
+++ b/views/widget/new_nav_first/nav_login.html
@@ -5,9 +5,11 @@
             <a  target="_blank" href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}"><img src="{{helper.cdnhost}}/assets/img/logo_common_black.png" alt="金吉列官网"/></a>
         </div>
         <ul class="page-type">
-            <li><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">留学</a></li>
-            <!--<li><a href="{{ helper.urlgen('yimin') }}">移民</a></li>-->
-            <li style="width: 118px;"><a href="{{ helper.urlgen('about') }}">关于金吉列</a></li>
+            <li class="type-nav small-nav {{'active' if tdk.pagekey == 'HOME'}}"><a href="{{ helper.urlgen('branch_home','c='+tdk.cityid) }}">留学</a></li>
+            <li class="type-nav middle-nav {{'active' if tdk.pagekey == 'ARTICLELIST'}}"><a href="{{helper.urlgen('articles')}}">留学攻略</a></li>
+            <!-- <li class="type-nav middle-nav"><a href="">首席顾问</a></li> -->
+            <li class="type-nav middle-nav {{'active' if tdk.pagekey == 'ADVISER'}}"><a href="{{helper.urlgen('adviser')}}">留学顾问</a></li>
+            <li class="type-nav big-nav {{'active' if tdk.pagekey == 'PROFILE'}}"><a href="{{ helper.urlgen('about') }}">关于金吉列</a></li>
         </ul>
         <div class="nav-right">
             <div class="new-searchs new-home-search">
