--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -152,7 +152,7 @@
           <h3>猜你喜欢</h3>
         </div>
       {% if userinfo.adviser_type == 1 %}
-        {% esi helper.include(esikey,'fragment/guess_like','n='+userinfo.country,'c='+userinfo.organid) %}
+        {% esi helper.include(esikey,'fragment/guess_like','n='+article.article_info.country_id,'c='+userinfo.organid) %}
       {% else %}
         {% esi helper.include(esikey,'fragment/yimin_guess_like','n='+userinfo.country,'c='+userinfo.organid) %}
       {% endif %}
