顾问聚合页

--- a/views/adviser.html
+++ b/views/adviser.html
@@ -171,7 +171,7 @@
             </div>
         {% if so_adviser_list.total == 0 or so_adviser_list.total == null %}
         <!--没有搜索到数据-->
-        <div class="no-result page-blank">
+        <div class="no-result page-blank clearfix">
             <img src="{{helper.cdnhost}}/assets/img/blank.png" alt="" class="blank-img"/>
             <span class="blank-info">没有找到到相关内容，换个关键词试试吧</span>
         </div>
