--- a/views/adviser.html
+++ b/views/adviser.html
@@ -191,7 +191,7 @@
                 <i></i>
                 <h3>猜你喜欢</h3>
             </div>
-            {% esi helper.include(esikey,'fragment/searchguess_like','c='+tdk.cityid) %}
+            {% esi helper.include(esikey,'fragment/searchguess_like','c='+tdk.cityid,'n='+country) %}
         </div>
     </div>
 </div>
