--- a/views/widget2/community_advisor/community_advisor.html
+++ b/views/widget2/community_advisor/community_advisor.html
@@ -77,7 +77,7 @@
     <!-- <div style="position: relative;">
       <img src="{{helper.cdnhost}}/assets/img/tou_guwen.png" alt="" style="position: absolute;right: 0px;bottom: 0px;width: 34px;height: 34px;">
     </div> -->#}
-    <dt class="advisor-img" onclick="advisor_img({{advisor.uid}})" style="background-image: url('{{helper.avaterimg(advisor.uid, 'small', advi,advisor.version)}}');background-position: 0 0;cursor: pointer;"></dt>
+    <dt class="advisor-img" onclick="advisor_img({{advisor.uid}})" style="background-image: url('{{helper.avaterimg(advisor.uid, 'small', advisor.status,advisor.version)}}');background-position: 0 0;cursor: pointer;"></dt>
     <dd>
       <p class="advisor-name" style="white-space: nowrap;overflow: hidden;text-overflow: ellipsis;">{{ advisor.realname }}</p>
       {% if advisor.organid != null %}
@@ -95,8 +95,8 @@
     <p class="expand1">{{ advisor.introduce }}</p>
     {% endif %}
   </div>
-  <div class="advisor-btn {% if login_info.uid ==advisor.uid %}advisor-btn-gray{% endif %}">
-    <a {% if login_info.uid !== advisor.uid %} data-new_job_number="{{ advisor.new_job_number}}" {% endif %}class="advisor-zixun " style="padding: 4px 24px;" rel="nofollow">立即咨询</a>
+  <div class="advisor-btn {% if login_info.uid ==advisor.uid %}advisor-btn-gray{% endif %}" style="position: absolute;bottom: 1px;">
+    <span {% if login_info.uid !== advisor.uid %} data-new_job_number="{{ advisor.new_job_number}}" onclick="openchat_new({{advisor.uid}})" id="openchat_{{advisor.uid}}" {% endif %} class="advisor-zixun"  style="padding: 4px 24px;" rel="nofollow">立即咨询</span>
     {% if advisor.is_follow %}
       <span class="advisor-guanzhu guanzhu-btn_{{advisor.uid}}" style="padding: 3px 31px;" data-uid="{{advisor.uid}}" onclick="guanzhu({{advisor.uid}})">已关注</span>
     {% else %}
@@ -107,18 +107,6 @@
   <div class="tan_tupian_{{advisor.uid}}" style="width: 220px;height: 276px;position: absolute;top: 0;left: 236px;z-index: 999;display: none"><img src="{{ advisor.header_avatar_big }}" alt=""></div>
 {% endif %}
 </div>
-<script>
-  
- $(function(){
-   //立即咨询
-   $('.advisor-btn').on("click", ".advisor-zixun", openchat_new); 
-   function openchat_new(){
-     var jobnum = $(this).attr('data-new_job_number')
-     openJesongChatByCus(1,jobnum)
-   }
-   
- })
-</script>
 {% endmacro %}
 <!--离职顾问-->
 {% macro advisor_leave(advisor, helper,login_info) %}
