--- a/views/widget/new_slide/new_slide3.html
+++ b/views/widget/new_slide/new_slide3.html
@@ -19,8 +19,8 @@
             <img src="{{helper.cdnhost}}/assets/img/yijian.png" alt="在线评估" class="quick-img guanggao-slide">
             <span>在<br>线<br>评<br>估</span>
             <div id="comment_con"
-                 style="width: 280px;background: #fff;right: 46px;top: -108px;margin-top:92px;*margin-top:182px;position: absolute;border: 1px solid #dcdcdc;display: none">
-              <div id="comment_close" style="margin-left: 5px;font-size: 15px;cursor: pointer; color:#333333;">x</div>
+                 style="width: 280px;background: #fff;left: 44px;top: -108px;margin-top:92px;*margin-top:182px;position: absolute;border: 1px solid #dcdcdc;display: none">
+              <div id="comment_close" style="font-size: 15px;cursor: pointer; color:#333333;">x</div>
               <!--  <iframe id="floatUrls" style="width: 100%;height:100%;" frameborder="no" border="0"
                        marginwidth="0" marginheight="0" scrolling="no" allowtransparency="yes"
                        src="http://im.jjl.cn/live/chat.dll?c=1&command=butiong"></iframe> -->
