--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -2,6 +2,11 @@
 .lxContaniner{margin-top:26px;width:1200px;overflow: hidden;margin-left: auto;margin-right: auto;}
 .lx-head{padding-bottom:10px;height:27px;border-bottom:solid 1px #dcdcdc;}
 .lx-head h1{float:left;width:132px;overflow: hidden; margin-right:40px;color:#333;font-size:22px}
+.lx-head .lx-tags-tab {
+	height: 38px;
+	float: left;
+	position: relative;
+}
 .lx-tabitems{float:left;margin-top:5px}
 .lx-tabitems li{position:relative;float:left;color:#666;margin-right:14px;text-align:center;font-size:14px;cursor:pointer}
 .lx-tabitems li.active{color:#c13232;font-size: 14px;}
@@ -9,14 +14,26 @@
 .lx-tabitems li.active em{position:absolute;bottom:-14px;left:0;display:block;width:100%;height:2px;background:#c13232}
 .lx-head a{ font-size: 14px;color: #c13232;float: left;margin-top: 5px;}
 .lx-head .enter{ font-size: 14px;color: #c13232;float: right;margin-top: 5px;padding-right:20px;font-weight: bold;background:url(../assets/img/home_icon_arrow.png) no-repeat;background-position:right center}
-.lx-hovertarg{ float: left;font-size: 0; position: relative; }
+.lx-hovertarg{ float: left;font-size: 0;}
 .lx-hovertarg li{ display: inline-block; margin-right: 20px; *float: left}
+.lx-hovertarg li:last-of-type {margin-right: 0;}
 .lx-hovertarg li a{font-size: 14px;color: #666;	transition: .2s ease;-webkit-transition: .2s ease;}
 .lx-hovertarg > li a:hover{color: #c13232;font-weight: bold;transform: scale(1.1);-webkit-transform: scale(1.1);}
-.lx-hovertarg .slide-icon{position: absolute;top:2px;right:-20px;height: 22px;width: 22px;cursor: pointer;}
-.slide-menu{ position: absolute; width: 872px; height:88px; background: #fff;box-shadow: 1px 2px 5px rgba(61, 55, 55, 0.26);left:-215px;top:37px;z-index: 999;padding-bottom: 12px;display:none;}
-.slide-menu li{ width:56px; margin-left: 16px; margin-right: 15px;margin-top: 12px;}
-.slide-menu li a:hover{ color: #c13232; text-decoration: underline;}
+.lx-tags-tab .slide-icon-area {
+	float: right;
+	cursor: pointer;
+	width: 62px;
+	height: 24px;
+	text-align: center;
+}
+.lx-tags-tab .slide-icon{display:inline-block;height: 22px;width: 22px;margin-top: 2px;}
+.lx-tags-tab .slide-menu{ position: absolute; width: 872px; height:88px; background: #fff;box-shadow: 1px 2px 5px rgba(61, 55, 55, 0.26);left:-4px;top:37px;z-index: 999;padding-bottom: 12px;display:none;font-size: 0;}
+.lx-tags-tab .slide-menu li{ width:56px; margin-left: 16px; margin-right: 15px;margin-top: 12px;display: inline-block;*float: left;}
+.lx-tags-tab .slide-menu li a {
+	font-size: 14px;
+	color: #666;
+}
+.lx-tags-tab .slide-menu li a:hover{ color: #c13232; text-decoration: underline;}
 
 
 .gw-items li {
@@ -103,32 +120,34 @@
 	<div class="lx-head">
 		<h1 style="font-weight: normal">{{floor.country_name}}留学</h1>
 		<div class="lx-tags-tab">
-		<ul class="lx-tabitems" data-country_id="{{floor.country_id}}">
-			{% for tagitem in floor.list %}
-				{% if loop.index == 1 %}
-				<li class="active" data-edu_id="{{tagitem.edu_id}}">{{tagitem.edu_name}}<em></em></li>
-				{% else %}
-				<li data-edu_id="{{tagitem.edu_id}}">{{tagitem.edu_name}}<em></em></li>
-				{% endif %}
-			{% endfor %}
-		</ul>
-		<ul class="lx-hovertarg">
-			{% for targitems in targlist%}
-				{% if loop.index <= 9 %}
-					<li><a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id, 'tag=' + targitems.type)}}" target="_blank">{{targitems.type}}</a></li>
-				{% endif %}
-			{% endfor %}
-			<ul class="slide-menu">
-				{% for targitems in targlist %}
-				 	{% if loop.index > 9%}
+			<ul class="lx-tabitems" data-country_id="{{floor.country_id}}">
+				{% for tagitem in floor.list %}
+					{% if loop.index == 1 %}
+					<li class="active" data-edu_id="{{tagitem.edu_id}}">{{tagitem.edu_name}}<em></em></li>
+					{% else %}
+					<li data-edu_id="{{tagitem.edu_id}}">{{tagitem.edu_name}}<em></em></li>
+					{% endif %}
+				{% endfor %}
+			</ul>
+			<ul class="lx-hovertarg">
+				{% for targitems in targlist%}
+					{% if loop.index <= 9 %}
 						<li><a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id, 'tag=' + targitems.type)}}" target="_blank">{{targitems.type}}</a></li>
 					{% endif %}
 				{% endfor %}
 			</ul>
-			<i class="slide-icon" style="background:url({{helper.cdnhost}}/assets/img/home-slidedown.gif)"></i>
-		</ul>
+			<ul class="slide-menu">
+				{% for targitems in targlist %}
+					{% if loop.index > 9%}
+						<li><a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id, 'tag=' + targitems.type)}}" target="_blank">{{targitems.type}}</a></li>
+					{% endif %}
+				{% endfor %}
+			</ul>
+			<div class="slide-icon-area">
+				<i class="slide-icon" style="background:url({{helper.cdnhost}}/assets/img/home-slidedown.gif)"></i>
+			</div>
 		</div>
-		<a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id)}}" target="_blank" class="enter">进入专区</a>
+		<a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id)}}" target="_blank" class="enter">查看详情</a>
 	</div>
 	{% for type in  floor.list %}{#类别#}
 	{% if loop.index == 1 and type.edu_name == '推荐'%}
@@ -143,7 +162,7 @@
 					<div class="article-info clearfix">
 						<a class="adviser-info clearfix" href="{{helper.urlgen(item.uid | string)}}">
 							<div target="_blank" class="avatar" style="background-image:url({{helper.avaterimg(item.user_info.uid, 'small', item.user_info.status,item.user_info.version)}});background-size:cover"></div>
-							<div class="adviser-icon">ss{{item.user_info.realname}}<i></i></div>		
+							<div class="adviser-icon">{{item.user_info.realname}}<i></i></div>		
 						</a>	
 						<div class="tag article-tag special">留学时讯</div>	
 					</div>			
@@ -217,21 +236,23 @@
 		$(this).addClass('active').siblings().removeClass('active');
 	})
 	//折叠菜单
-	$(".lx-hovertarg .slide-icon").on('click',function () {
-		console.log('aa')
-		if(!$(this).hasClass('slide-toggle-icon')){
-			$(this).addClass('slide-toggle-icon')
-			$(this).prev().slideDown(90)
-		}else{
-			$(this).removeClass('slide-toggle-icon')
-			$(this).prev().slideUp(90)
+	var sUserAgent = navigator.userAgent.toLowerCase();
+    if(sUserAgent .match(/ipad/i) != "ipad"){
+		$('.lx-tags-tab').hover(function () {
+			$(this).find('.slide-menu').slideDown(90);
+		}, function () {
+			$(this).find('.slide-menu').slideUp(90);
+		})
+	}
+	$('.lx-tags-tab').on('click', function () {
+		if (!$(this).hasClass('slide-down')) {
+			$(this).addClass('slide-down');
+			$(this).find('.slide-menu').slideDown(90);
 		}
-	})
-
-	$(".slide-menu a").click(function () {
-		$(this).parent().parent().slideUp(90)
-		$(".lx-hovertarg i").removeClass('slide-toggle-icon')
-		$(".lx-hovertarg i").addClass('slide-icon')
+		else {
+			$(this).removeClass('slide-down');
+			$(this).find('slide-menu').slideUp(90);
+		}
 	})
 
   })
