--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -23,11 +23,11 @@
 	float: right;
 	cursor: pointer;
 	width: 62px;
-	height: 24px;
+	height: 37px;
 	text-align: center;
 }
 .lx-tags-tab .slide-icon{display:inline-block;height: 22px;width: 22px;margin-top: 2px;}
-.lx-tags-tab .slide-menu{ position: absolute; width: 872px; height:88px; background: #fff;box-shadow: 1px 2px 5px rgba(61, 55, 55, 0.26);left:-4px;top:37px;z-index: 999;padding-bottom: 12px;display:none;font-size: 0;}
+.lx-tags-tab .slide-menu{ position: absolute; width: 872px; height:88px; background: #fff;box-shadow: 1px 2px 5px rgba(61, 55, 55, 0.26);left:-4px;top:37px;z-index: 999;padding-bottom: 12px;font-size: 0;display: none;}
 .lx-tags-tab .slide-menu li{ width:56px; margin-left: 16px; margin-right: 15px;margin-top: 12px;display: inline-block;*float: left;}
 .lx-tags-tab .slide-menu li a {
 	font-size: 14px;
@@ -238,20 +238,23 @@
 	//折叠菜单
 	var sUserAgent = navigator.userAgent.toLowerCase();
     if(sUserAgent .match(/ipad/i) != "ipad"){
+		console.log(sUserAgent,'是')
 		$('.lx-tags-tab').hover(function () {
+			$('.slide-icon-area').addClass('slide-down');
 			$(this).find('.slide-menu').slideDown(90);
 		}, function () {
+			$('.slide-icon-area').removeClass('slide-down');
 			$(this).find('.slide-menu').slideUp(90);
 		})
 	}
-	$('.lx-tags-tab').on('click', function () {
-		if (!$(this).hasClass('slide-down')) {
+	$('.slide-icon-area').on('click', function () {
+		if (!$(this).hasClass('slide-down')) {	
 			$(this).addClass('slide-down');
-			$(this).find('.slide-menu').slideDown(90);
+			$(this).siblings('.slide-menu').slideDown(90);
 		}
 		else {
 			$(this).removeClass('slide-down');
-			$(this).find('slide-menu').slideUp(90);
+			$(this).siblings('.slide-menu').slideUp(90);
 		}
 	})
 
