--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -19,14 +19,14 @@
 .lx-hovertarg li:last-of-type {margin-right: 0;}
 .lx-hovertarg li a{font-size: 14px;color: #666;	transition: .2s ease;-webkit-transition: .2s ease;}
 .lx-hovertarg > li a:hover{color: #c13232;font-weight: bold;transform: scale(1.1);-webkit-transform: scale(1.1);}
-.lx-tags-tab .slide-icon-area {
-	float: right;
+.slide-icon-area {
+	float: left;
 	cursor: pointer;
 	width: 62px;
 	height: 37px;
 	text-align: center;
 }
-.lx-tags-tab .slide-icon{display:inline-block;height: 22px;width: 22px;margin-top: 2px;}
+.slide-icon-area .slide-icon{display:inline-block;height: 22px;width: 22px;margin-top: 2px;}
 .lx-tags-tab .slide-menu{ position: absolute; width: 872px; height:88px; background: #fff;box-shadow: 1px 2px 5px rgba(61, 55, 55, 0.26);left:-4px;top:37px;z-index: 999;padding-bottom: 12px;font-size: 0;display: none;}
 .lx-tags-tab .slide-menu li{ width:56px; margin-left: 16px; margin-right: 15px;margin-top: 12px;display: inline-block;*float: left;}
 .lx-tags-tab .slide-menu li a {
@@ -143,9 +143,9 @@
 					{% endif %}
 				{% endfor %}
 			</ul>
-			<div class="slide-icon-area">
-				<i class="slide-icon" style="background:url({{helper.cdnhost}}/assets/img/home-slidedown.gif)"></i>
-			</div>
+		</div>
+		<div class="slide-icon-area">
+			<i class="slide-icon" style="background:url({{helper.cdnhost}}/assets/img/home-slidedown.gif)"></i>
 		</div>
 		<a href="{{helper.active_urlgen('articles', 'n=' + floor.country_id)}}" target="_blank" class="enter">查看详情</a>
 	</div>
@@ -237,24 +237,24 @@
 	})
 	//折叠菜单
 	var sUserAgent = navigator.userAgent.toLowerCase();
-    if(sUserAgent .match(/ipad/i) != "ipad"){
-		console.log(sUserAgent,'是')
-		$('.lx-tags-tab').hover(function () {
+    if(sUserAgent .match(/ipad/i) != "ipad"){		
+		$('.lx-tags-tab').on('mouseenter',function () {
 			$('.slide-icon-area').addClass('slide-down');
 			$(this).find('.slide-menu').slideDown(90);
-		}, function () {
+		})
+		$('.lx-tags-tab').on('mouseleave', function () {
 			$('.slide-icon-area').removeClass('slide-down');
 			$(this).find('.slide-menu').slideUp(90);
 		})
 	}
-	$('.slide-icon-area').on('click', function () {
+	$('.slide-icon-area').on('click', function (e) {
 		if (!$(this).hasClass('slide-down')) {	
 			$(this).addClass('slide-down');
-			$(this).siblings('.slide-menu').slideDown(90);
+			$(this).siblings('.lx-tags-tab').find('.slide-menu').slideDown(90);
 		}
 		else {
 			$(this).removeClass('slide-down');
-			$(this).siblings('.slide-menu').slideUp(90);
+			$(this).siblings('.lx-tags-tab').find('.slide-menu').slideUp(90);
 		}
 	})
 
